pg.gena.host/etc/iptables/rules.v4
*filter
:INPUT DROP 
:FORWARD DROP 
:OUTPUT ACCEPT 
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 159.69.33.152/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 16200 -j ACCEPT
-A INPUT -s 159.69.33.152/32 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -p icmp  -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wg200 -j ACCEPT
-A FORWARD -o wg200 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT 
:INPUT ACCEPT 
:OUTPUT ACCEPT 
:POSTROUTING ACCEPT 
-A POSTROUTING -s 10.200.0.0/24 ! -d 10.200.0.0/24 -o eth0 -j MASQUERADE
COMMIT
